Completely redesigned cart system, using cart model they are tied by userId, get cart functionality is currently only being called on getIndex from home controller for testing purposes, cart adding and retrieval work for logged in users, however create duplicate items, for new users app crashes, currently debugging

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,14 +36,19 @@
 		</section>
 
 		<nav class="mini-cart">
-			<table>
-				<% for(var i=0; i < products.length; i++) { %>
-				   <tr>
-					 <td><%= products[i].id %></td>
-					 <td><%= products[i].name %></td>
-				   </tr>
+			<ul>
+				<% if(userCart[0]) { %>
+					<% userCart.forEach(el => { %>
+						<li>
+						 <span><%= el.name %></span>
+						 <span>$10.00</span>
+						 <span>x<%= el.qty %></span>
+						</li>
+					<%})%>
+					<%} else {%>
+					 <li><h1>So much empty lol</h1></li>
 				<% } %>
-				</table>
+			</ul>
 			<!-- <ul>
 				<li>
 					<span>Item 1</span>
