Added ensureAuth for homecontroller index page and kept newly altered failure auth behaviour, and added default values to pushed in as a guest user. Wrapped addProduct logic in an if statement to match by ID if product already exists in user's cart

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,8 +41,7 @@
 					<% userCart.forEach(el => { %>
 						<li>
 						 <span><%= el.name %></span>
-						 <span>$10.00</span>
-						 <span>x<%= el.qty %></span>
+						 <span><%= el.qty %></span>
 						</li>
 					<%})%>
 					<%} else {%>
