Restructured cart and product models to include new properties to allow for easier rendering. Added size property to cart model and added category property to product model. Implemented same rendering method with getCart call on tops,bottoms and support pages.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
 					<% userCart.forEach(el => { %>
 						<li>
 						 <span><%= el.name %></span>
-						 <span><%= el.qty %></span>
+						 <span>x<%= el.qty %></span>
 						</li>
 					<%})%>
 					<%} else {%>
