--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -42,6 +42,20 @@
 	</nav>
 
     <!--Tops-->
+	<!-- <% tops.forEach(el => { %>
+		 <span><%= el.name %></span>
+		 <img src="<%= el.img %>" alt="">
+		 <form action="/cart/addProduct" method="POST">
+			<button class="btn btn-bottom-stripe btn-bottom-stripe--black" type="submit"> Add To Cart </button>
+			<select name="size" id="size" required>
+				<option value="">None</option>
+				<option value="small">Small</option>
+				<option value="medium">Medium</option>
+				<option value="large">Large</option>
+			</select>
+		</form>
+		</li>
+	<%})%> -->
 
     <section class=" container grid">
         <div class="flex">
