--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -30,14 +30,18 @@
 	</section>
 
 	<nav class="mini-cart">
-		<!-- <ul>
-			<li><span>Item 1</span></li>
-			<li><span>Item 2</span></li>
-			<li><span>Item 3</span></li>
-			<li><span>Item 4</span></li>
-			<li><span>Item 5</span></li>
-			<li><span>Item 6</span></li>
-		</ul> -->
+		<ul>
+			<% if(userCart[0]) { %>
+				<% userCart.forEach(el => { %>
+					<li>
+					 <span><%= el.name %></span>
+					 <span>x<%= el.qty %></span>
+					</li>
+				<%})%>
+				<%} else {%>
+				 <li><h1>So much empty lol</h1></li>
+			<% } %>
+		</ul>
 		<div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
 	</nav>
 
