Fixed mini cart display issues on tops and bottoms page. Fixed tops page not displaying for logged out users. Passed in guest information for logged out users.

--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -35,6 +35,7 @@
 				<% userCart.forEach(el => { %>
 					<li>
 					 <span><%= el.name %></span>
+					 <img src="<%= el.image %>" alt="">
 					 <span>x<%= el.qty %></span>
 					</li>
 				<%})%>
