Resolved issue with mini cart not properly reading an id for a logged out user. Changed empty cart message for logged out user. Added mini cart on support page.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
 						</li>
 					<%})%>
 					<%} else {%>
-					 <li><h1>So much empty lol</h1></li>
+					 <li><span>No Armor Equipped...</span></li>
 				<% } %>
 			</ul>
 			<!-- <ul>
