--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -39,7 +39,7 @@
 					</li>
 				<%})%>
 				<%} else {%>
-				 <li><h1>So much empty lol</h1></li>
+				 <li><span>No Armor Equipped...</span></li>
 			<% } %>
 		</ul>
 		<div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
