Implemented new product view, route and controller. Wrapped all rendered products in anchor tag which will call product page with its respective ID.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -303,7 +303,7 @@ footer {
 
 
 /******************************************
-/* Tops
+/* Tops/Bottoms
 /*******************************************/
 
  .grid div {
@@ -341,3 +341,9 @@ footer {
 
  
 
+/******************************************
+/* Support
+/*******************************************/
+.flex.support {
+     text-align: center;
+}
