Started to implement delete function in cart controller. Fixed styling issues for mini cart.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
 			<ul>
 				<% if(userCart[0]) { %>
 					<% userCart.forEach(el => { %>
-						<li>
+						<li class="grid">
 						 <span><%= el.name %></span>
 						 <span>x<%= el.qty %></span>
 						</li>
