--- a/public/css/style.css
+++ b/public/css/style.css
@@ -227,14 +227,29 @@ footer {
      display: block;
      text-align: center;
      width: 100%;
-     max-width: 200px;
+     max-width: 300px;
      margin: 0 auto 16px;
      padding: 12px 16px;
      border: solid 2px black; 
 }
+.mini-cart .grid {
+
+     display: grid;
+     grid-template-columns: repeat(1, 1fr);
+     gap: 10px;
+     justify-content: center;
+     align-items: center;
+     
+}
+
+.mini-cart .item {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+}
 
 .mini-cart .flex {
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
   padding: 0 0 0 40px;
 }
