Fixed large kirby t-shirt not adding to user cart. Added mini cart styling to other pages. Generaly debugging

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,13 +39,14 @@
 			<ul>
 				<% if(userCart[0]) { %>
 					<% userCart.forEach(el => { %>
-						<li class="grid">
+						<li class="item">
+						 <img src="<%= el.img %>" alt="">
 						 <span><%= el.name %></span>
 						 <span>x<%= el.qty %></span>
 						</li>
 					<%})%>
 					<%} else {%>
-					 <li><span>No Armor Equipped...</span></li>
+					 <li class="item"><span>No Armor Equipped...</span></li>
 				<% } %>
 			</ul>
 			<!-- <ul>
