--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -36,6 +36,7 @@
 					<li class="item">
 					 <img src="<%= el.img %>" alt="">
 					 <span><%= el.name %></span>
+					 <span><%= el.size %> -></span>
 					 <span>x<%= el.qty %></span>
 					 <a href=""><i class="fa-solid fa-square-minus"></i></a>
 					</li>
