--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,33 +42,15 @@
 						<li class="item">
 						 <img src="<%= el.img %>" alt="">
 						 <span><%= el.name %></span>
+						 <span><%= el.size %> -></span>
 						 <span>x<%= el.qty %></span>
+						 <a href=""><i class="fa-solid fa-square-minus"></i></a>
 						</li>
 					<%})%>
 					<%} else {%>
 					 <li class="item"><span>No Armor Equipped...</span></li>
 				<% } %>
 			</ul>
-			<!-- <ul>
-				<li>
-					<span>Item 1</span>
-				</li>
-				<li>
-					<span>Item 2</span>
-				</li>
-				<li>
-					<span>Item 3</span>
-				</li>
-				<li>
-					<span>Item 4</span>
-				</li>
-				<li>
-					<span>Item 5</span>
-				</li>
-				<li>
-					<span>Item 6</span>
-				</li>
-			</ul> -->
 			<div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
 		</nav>
 
