--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -33,12 +33,12 @@
 		<ul>
 			<% if(userCart[0]) { %>
 				<% userCart.forEach(el => { %>
-					<li class="item">
+					<li class="item" data-id="<%= el.id %>">
 					 <img src="<%= el.img %>" alt="">
 					 <span><%= el.name %></span>
 					 <span><%= el.size %> -></span>
 					 <span>x<%= el.qty %></span>
-					 <a href=""><i class="fa-solid fa-square-minus"></i></a>
+					 <a href="#"><i class="fa-solid fa-square-minus del"></i></a>
 					</li>
 				<%})%>
 				<%} else {%>
