--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -38,7 +38,7 @@
 					 <span><%= el.name %></span>
 					 <span><%= el.size %> -></span>
 					 <span>x<%= el.qty %></span>
-					 <a href="#"><i class="fa-solid fa-square-minus del"></i></a>
+					 <a href="#" class="del"><i class="fa-solid fa-square-minus"></i></a>
 					</li>
 				<%})%>
 				<%} else {%>
