--- a/views/support.ejs
+++ b/views/support.ejs
@@ -42,7 +42,7 @@
 						</li>
 					<%})%>
 					<%} else {%>
-					 <li class="item"><span>No Armor Equipped...</span></li>
+					 <li><span>No Armor Equipped...</span></li>
 				<% } %>
 			</ul>
 			<div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
