--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
 
 		<!--Selections-->
 
-		<section class="select flex">
+		<section class="select flex categories">
 			<div class="flex">
 				<h2>Tops</h2>
 				<a href="tops"><button class="btn btn-pushable btn-pushable--black">Browse</button></a>
