--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,7 +79,7 @@
 		<footer id="footer" class="footer flex">
 			<div class="inner">
 				<ul class="menu">
-					<li>&copy; All Rights Reserved</li>
+					<!-- <li>&copy; All Rights Reserved</li> -->
 				</ul>
 			</div>
 		</footer>
