Index page now responsive for most devices, all devices should be conforming to the same initial design.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -403,7 +403,7 @@ footer {
 /* Responsive Design
 /*******************************************/
 
-@media (max-width: 980px) {
+@media screen and (max-width: 980px) {
      .flex.categories {
           flex-direction: column;
           gap: 40px;
@@ -412,11 +412,36 @@ footer {
      }
      
      .select {
-          height: 900px;
+          height: 1100px;
      }
 
      .select div {
           width: 50%;
      }
 
+     .btn-pushable {
+          width: 100px;
+     }
+
+     .logo {
+          font-size: 20px;
+     }
+
+     .products.flex span {
+          white-space: nowrap;
+     }
+     
+
+   }
+
+   @media screen and (max-width: 720px) {
+     .grid {
+          grid-template-columns: repeat(1, 1fr);
+     }
+   }
+
+   @media screen and (max-width: 500px) {
+     .logo { 
+          white-space: nowrap;
+     }
    }
