--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,11 +77,7 @@
 		<!--License-->
 
 		<footer id="footer" class="footer flex">
-			<div class="inner">
-				<ul class="menu">
-					<!-- <li>&copy; All Rights Reserved</li> -->
-				</ul>
-			</div>
+			<p>Designed and built by: <a href="https://github.com/r-Dev03">Ribbal Hussain</a></p>
 		</footer>
 	</section>
 	<script type="text/javascript" src="/js/main.js"></script>
