--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
 						<li class="item" data-id="<%= el.id %>">
 						 <img src="<%= el.img %>" alt="">
 						 <span><%= el.name %></span>
-						 <span><%= el.size %> -></span>
+						 <span><%= el.size %></span>
 						 <span>x<%= el.qty %></span>
 						 <a href="#" class="del"><i class="fa-solid fa-square-minus"></i></a>
 						</li>
@@ -51,7 +51,7 @@
 					 <li><span>No Armor Equipped...</span></li>
 				<% } %>
 			</ul>
-			<div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
+			<div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Checkout</button></a></div>
 		</nav>
 
 		<!--Selections-->
