--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,7 +195,7 @@ footer {
      max-width: 1100px;
      margin: 0 auto;
      overflow: auto;
-     padding: 0 40px;
+     padding: 0 10px;
 }
 
 .main {
@@ -224,16 +224,21 @@ footer {
      left: 0;
 }
 
+.mini-cart ul {
+     padding: 0 50px;
+}
+
 
 .mini-cart ul li  {
      display: block;
      text-align: center;
      width: 100%;
-     max-width: 400px;
+     max-width: 500px;
      margin: 0 auto 16px;
      padding: 12px 16px;
      border: solid 2px black; 
 }
+
 .mini-cart .grid {
 
      display: grid;
@@ -254,7 +259,7 @@ footer {
 .mini-cart .flex {
   align-items: center;
   justify-content: center;
-  padding: 0 0 0 40px;
+  padding: 0;
 }
 
 
@@ -275,6 +280,7 @@ footer {
 
 .navbar ul {
      display: flex;
+     padding: 0 0 0 10px;
 }
 
 .navbar a {
@@ -430,7 +436,6 @@ footer {
      .products.flex span {
           white-space: nowrap;
      }
-     
 
    }
 
@@ -444,4 +449,15 @@ footer {
      .logo { 
           white-space: nowrap;
      }
+
+     .mini-cart ul li span {
+          white-space: nowrap;
+          font-size: 0.8rem;
+     }
+
+     .mini-cart .checkout {
+          
+     }
    }
+
+   
