--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
 					 <li><span>No Armor Equipped...</span></li>
 				<% } %>
 			</ul>
-			<div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Checkout</button></a></div>
+			<div class ="flex checkout"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Checkout</button></a></div>
 		</nav>
 
 		<!--Selections-->
