--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -13,7 +13,7 @@
 
 
 </head>
-<body class="tops">
+<body class="tops base">
 	<!--Navigation--> 
 	<section class="navbar">
 		<div class="container flex">
@@ -45,7 +45,7 @@
 				 <li><span>No Armor Equipped...</span></li>
 			<% } %>
 		</ul>
-		<div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
+		<div><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Checkout</button></a></div>
 	</nav>
 
     <!--Tops-->
