General styling improvements. Changed set timeout to 1000 MS in addProduct function. Support page now responsive for smaller devices. Currently looking for way to style for galaxy fold devices.

--- a/views/support.ejs
+++ b/views/support.ejs
@@ -45,12 +45,12 @@
 					 <li><span>No Armor Equipped...</span></li>
 				<% } %>
 			</ul>
-			<div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
+			<div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Checkout</button></a></div>
 		</nav>
 
 		<!--Selections-->
 
-		<section class="select flex">
+		<section class="select flex support-container">
 			<div class="flex support">
 				<h2>Shipping Policy</h2>
                 <p>Please allow shipping to take 2-3 weeks. For any inquiries regarding late shipping or any other issues, please contact 123-456-789</p>
