--- a/public/css/style.css
+++ b/public/css/style.css
@@ -420,12 +420,13 @@ footer {
 /*******************************************/
 
 @media screen and (max-width: 980px) {
-     .flex.categories {
+     .flex.categories, .flex.support-container {
           flex-direction: column;
           gap: 40px;
           margin-top: 50px;
           
      }
+     
      
      .select {
           height: 1100px;
@@ -462,7 +463,7 @@ footer {
 
      .mini-cart ul li span {
           white-space: nowrap;
-          font-size: 0.8rem;
+          font-size: 0.7rem;
      }
    }
 
