--- a/views/product.ejs
+++ b/views/product.ejs
@@ -14,13 +14,14 @@
 		<link rel="stylesheet" href="css/loader.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</head>
+    <body>
 
     <section class="navbar">
         <div class="container flex">
             <h1 class="logo">Character Select</h1>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="support">Support</a></li>
                     <li><a href="#"><i class="fa-solid fa-cart-shopping" id="cart"></i></a></li>
                     <li><a href="signup"><i class="fa-regular fa-user"></i></a></li>
@@ -45,10 +46,10 @@
                  <li><span>No Armor Equipped...</span></li>
             <% } %>
         </ul>
-        <div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Proceed To Checkout</button></a></div>
+        <div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Checkout</button></a></div>
     </nav>
 
     <h1>Product Page</h1>
 
-    
+    <script type="text/javascript" src="/js/main.js"></script>
 	<body>
