--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -8,7 +8,7 @@
 
     <!-- external CSS link -->
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
@@ -54,7 +54,7 @@
 			<div class="flex">
 				<section class="products flex">
 			 		<span><%= el.name %></span>
-		 			<a href="/product"><img src="<%= el.image %>" alt=""></a>
+		 			<a href="/product/<%= el._id %>"><img src="<%= el.image %>" alt=""></a>
 		 			<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black addProduct" type="submit"> Add To Cart </button>
 					<input type="hidden" name="name" value="<%= el.name %>">
