--- a/views/product.ejs
+++ b/views/product.ejs
@@ -9,12 +9,12 @@
 		<title>Clothing Store</title>
 
 		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/loader.css">
+		<link rel="stylesheet" href="/css/normalize.css">
+		<link rel="stylesheet" href="/css/style.css">
+		<link rel="stylesheet" href="/css/loader.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</head>
-    <body>
+    <body class="product">
 
     <section class="navbar">
         <div class="container flex">
@@ -49,7 +49,26 @@
         <div class = "flex"><a href="checkout"><button class="btn btn-pushable btn-pushable--black">Checkout</button></a></div>
     </nav>
 
-    <h1>Product Page</h1>
+    <section class="product-single">
+        <div class="flex container">
+            <img src="<%= product.image %>" alt="">
+        </div>
+        <div class="products info">
+            <h2 class="product-name"><%= product.name %></h2>
+            <h3 class="product-price">$10.00</h3>
+            <form action="/cart/addProduct" method="POST">
+                <button class="btn btn-bottom-stripe btn-bottom-stripe--black addProduct" type="submit"> Add To Cart </button>
+                <input type="hidden" name="name" value="<%= product.name %>">
+                <select name="size" id="size" required>
+                    <option value="">None</option>
+                    <option value="small">Small</option>
+                    <option value="medium">Medium</option>
+                    <option value="large">Large</option>
+                </select>
+            </form>
+        </div>
+    </section>
+
 
     <script type="text/javascript" src="/js/main.js"></script>
 	<body>
