--- a/views/product.ejs
+++ b/views/product.ejs
@@ -53,7 +53,7 @@
         <div class="flex container">
             <img src="<%= product.image %>" alt="">
         </div>
-        <div class="products info">
+        <div class="info products">
             <h2 class="product-name"><%= product.name %></h2>
             <h3 class="product-price">$10.00</h3>
             <form action="/cart/addProduct" method="POST">
@@ -68,6 +68,7 @@
             </form>
         </div>
     </section>
+
 
 
     <script type="text/javascript" src="/js/main.js"></script>
