Changed product quantity to just the letter for styling reasons. addProduct class now added to all add to cart buttons. Add alert is now fully functional on submission of form rather on click of button. Add alert is now fully responsive.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -460,6 +460,15 @@ footer {
 /* Responsive Design
 /*******************************************/
 
+@media screen and (max-width: 1350px) {
+
+     .hidden {
+          right: 70%;
+     }
+     
+}
+
+
 @media screen and (max-width: 980px) {
      .flex.categories, .flex.support-container {
           flex-direction: column;
@@ -489,6 +498,10 @@ footer {
           white-space: nowrap;
      }
 
+     .hidden {
+          right: 60%;
+     }
+
    }
 
    @media screen and (max-width: 720px) {
@@ -501,6 +514,12 @@ footer {
           font-size: 0.97rem;
       }
 
+
+     .hidden {
+          right: 50%;
+     }
+
+
    }
 
    @media screen and (max-width: 500px) {
@@ -511,6 +530,10 @@ footer {
      .mini-cart ul li span {
           white-space: nowrap;
           font-size: 0.7rem;
+     }
+
+     .hidden {
+          right: 20%;
      }
    }
 
