--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -55,7 +55,7 @@
 				<section class="products flex">
 			 		<span><%= el.name %></span>
 		 			<a href="/product/<%= el._id %>"><img src="<%= el.image %>" alt=""></a>
-		 			<form action="/cart/addProduct" method="POST">
+		 			<form action="/cart/addProduct" method="POST" onsubmit="addAlert()">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black addProduct" type="submit"> Add To Cart </button>
 					<input type="hidden" name="name" value="<%= el.name %>">
 					<select name="size" id="size" required>
