--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
 						<li class="item" data-id="<%= el.id %>">
 						 <img src="<%= el.img %>" alt="">
 						 <span><%= el.name %></span>
-						 <span><%= el.size %></span>
+						 <span><%= el.size[0].toUpperCase() %> -></span>
 						 <span>x<%= el.qty %></span>
 						 <a href="#" class="del"><i class="fa-solid fa-square-minus"></i></a>
 						</li>
