Changed svg's on index page from img tags to object tags, to allow proper rendering on safari based browsers. Added shopping-cart class to anchor tags surrounding shopping cart icon, and swapped event listener to that, allowing easier tapping/clicking for mobile devices to trigger mini cart.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
 					<ul>
 						<li><a href="#">Home</a></li>
 						<li><a href="support">Support</a></li>
-						<li><a href="#"><i class="fa-solid fa-cart-shopping" id="cart"></i></a></li>
+						<li><a href="#" class="shopping-cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
 						<li><a href="signup"><i class="fa-regular fa-user"></i></a></li>
 					</ul>
 				</nav>
@@ -60,17 +60,17 @@
 			<div class="flex">
 				<h2>Tops</h2>
 				<a href="tops"><button class="btn btn-pushable btn-pushable--black">Browse</button></a>
-				<img src="img/hoodie2.svg" alt="">
+				<object type="image/svg+xml" data="img/hoodie2.svg"></object>
 			</div>
 			<div class="flex">
 				<h2>Bottoms</h2>
 				<a href="bottoms"><button class="btn btn-pushable btn-pushable--black">Browse</button></a>
-				<img src="img/trousers.svg" alt="">
+				<object type="image/svg+xml" data="img/trousers.svg"></object>
 			</div>
 			<div class="flex">
 				<h2>Coming Soon...</h2>
 				<a href="#"><button class="btn btn-pushable btn-pushable--black">Browse</button></a>
-				<img src="img/perspective-dice-six-faces-random.svg" alt="">
+				<object type="image/svg+xml" data="img/perspective-dice-six-faces-random.svg"></object>
 			</div>
 		</section>
 
