--- a/views/support.ejs
+++ b/views/support.ejs
@@ -22,7 +22,7 @@
 					<ul>
 						<li><a href="/">Home</a></li>
 						<li><a href="#">Support</a></li>
-						<li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+						<li><a href="#" class="shopping-cart"><i class="fa-solid fa-cart-shopping"></i></a></li>
 						<li><a href="signup"><i class="fa-regular fa-user"></i></a></li>
 					</ul>
 				</nav>
