More SVG Debugging

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,7 +60,7 @@
 			<div class="flex">
 				<h2>Tops</h2>
 				<a href="tops"><button class="btn btn-pushable btn-pushable--black">Browse</button></a>
-				<object data="img/hoodie2.svg"></object>
+				<object data="img/hoodie2.svg" type="image/svg+xml"></object>
 			</div>
 			<div class="flex">
 				<h2>Bottoms</h2>
