--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,12 +65,12 @@
 			<div class="flex">
 				<h2>Bottoms</h2>
 				<a href="bottoms"><button class="btn btn-pushable btn-pushable--black">Browse</button></a>
-				<object type="image/svg+xml" data="img/trousers.svg"></object>
+				<object data="/img/trousers.svg" type="image/svg+xml"></object>
 			</div>
 			<div class="flex">
 				<h2>Coming Soon...</h2>
 				<a href="#"><button class="btn btn-pushable btn-pushable--black">Browse</button></a>
-				<object type="image/svg+xml" data="img/perspective-dice-six-faces-random.svg"></object>
+				<object data="/img/perspective-dice-six-faces-random.svg" type="image/svg+xml"></object>
 			</div>
 		</section>
 
