Add alert functionality completely revamped. Alert now only shows when addToCart route has been successfully completed, rather than an animation based on a submission of a form, query parameter will now be added based on succession. Currently debugging reset of the URL.

--- a/views/tops.ejs
+++ b/views/tops.ejs
@@ -70,7 +70,7 @@
 			<%})%>
 	</section>
 
-<% if (query !== {}) { %>  
+<% if (req.query.success !== undefined) { %>  
 	
 	<div class="alert-success">
 		<img src="img/coin.gif" alt="">
