Resolved odd arrow at the bottom of the tops page. Resolved add alert styling error on bottoms page. Added new images for testing on bottoms page.

--- a/views/bottoms.ejs
+++ b/views/bottoms.ejs
@@ -7,8 +7,8 @@
     <title>Bottoms</title>
 
     <!-- external CSS link -->
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="/css/normalize.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
@@ -54,7 +54,7 @@
 		<div class="flex">
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 1</span>
-				<img src="img/FRONT2.jpg" alt="">
+				<img src="img/Hunter.png" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black addProduct"> Add To Cart </button>
 					<input type="hidden" name="name" value=">_Bottoms/Product">
@@ -70,7 +70,7 @@
 		<div class="flex">
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 2</span>
-				<img src="img/FRONT2.jpg" alt="">
+				<img src="img/susanoo.png" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<input type="hidden" name="name" value=">_Bottoms/Product">
@@ -87,7 +87,7 @@
 		<div class="flex">
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 3</span>
-				<img src="img/FRONT2.jpg" alt="">
+				<img src="img/Curse_King.png" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<input type="hidden" name="name" value=">_Bottoms/Product">
@@ -104,7 +104,7 @@
 		<div class= "flex">
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 4</span>
-				<img src="img/FRONT2.jpg" alt="">
+				<img src="img/Skull_Pants.png" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<input type="hidden" name="name" value=">_Bottoms/Product">
@@ -121,7 +121,7 @@
 		<div class="flex">
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 5</span>
-				<img src="img/FRONT2.jpg" alt="">
+				<img src="img/Smiley.png" alt="">
 				<form action="/cart/addProduct" method="POST">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<input type="hidden" name="name" value=">_Bottoms/Product">
@@ -138,7 +138,7 @@
 		<div class="flex">
 			<section class="products flex">
 				<span>>_Bottoms/ Pants 6</span>
-				<img src="img/FRONT2.jpg" alt="">
+				<img src="img/Spider.png" alt="">
 				<form action="/cart/addProduct" method="POST" onsubmit="addAlert()">
 					<button class="btn btn-bottom-stripe btn-bottom-stripe--black"> Add To Cart </button>
 					<input type="hidden" name="name" value=">_Bottoms/Product">
@@ -151,13 +151,13 @@
 				</form>
 			</section>
 		</div>
-
-		<div class="alert-success">
-			<img src="img/coin.gif" alt="">
-			<h3>Added to cart successfully!</h3>
-		</div>
-     
     </section>
+	
+	<div class="alert-success">
+		<img src="img/coin.gif" alt="">
+		<h3>Added to cart successfully!</h3>
+		<i class="fa-solid fa-square-xmark x-button"></i>
+	</div>
 	<script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
